ajout tag alt sur logo du groupe

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Contenu minimal -->
 
 
-<img src="img/white_judas_priest_logo.png" height="640" width="1280"/>
+<img src="img/white_judas_priest_logo.png" height="640" width="1280" alt="logo du groupe Judas Priest"/>
 
 <h1>Un pilier du heavy metal</h1>
 
